2006-11-27  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.h (CAIRO_CHECK_VERSION): added.

	* packages/cairo/ext/rb_cairo_surface.c: moved #write_to_png to
	Cairo::Surface from Cairo::ImageSurface.

2006-11-09  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb, packages/cairo/lib/cairo/context/,
	packages/cairo/lib/cairo/context.rb: split Cairo::Context
	extensions with each file under packages/cairo/lib/cairo/context/
	directory.

2006-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c (cr_clip)
	(cr_clip_preserve): supported block.

2006-10-22  NANKI Haruo <nanki@dotswitch.net>

	* packages/cairo/ext/rb_cairo_path.c (cr_path_each): fixed
	a conversion bug.

2006-10-20  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c (cr_select_font_face):
	made slang and weight arguments of Cairo::Context#select_font_face
	optional.

	* samples/text2.rb: added --fade-out option.

2006-10-15  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c (Cairo::BINDINGS_VERSION): moved
	from ...
	* packages/cairo/lib/cairo.rb: ... here.

	* packages/cairo/lib/cairo.rb: moved Cairo.__add_one_arg_setter
	call to ...
	* packages/cairo/ext/rb_cairo.c, packages/cairo/ext/rb_cairo.h,
	  packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo_font_options.c,
	  packages/cairo/ext/rb_cairo_glyph.c,
	  packages/cairo/ext/rb_cairo_matrix.c,
	  packages/cairo/ext/rb_cairo_pattern.c,
	  packages/cairo/ext/rb_cairo_surface.c: ... here.

2006-10-15  Mathieu Blondel <mathieu@mblondel.org>

	* packages/cairo/lib/cairo.rb (Cairo::Context#quad_to,
	Cairo::Context#rel_quad_to): followed the current API:
	get_point -> current_point.

2006-07-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_constants.c: added a check whether
	SVG surface is available or not.

2006-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added 1.2.0 entry.
